#1503: Converted GetTransactionTypes UC to extend BasePaginatedMultipleEntitiesCommand